Updated MEDIA_URL and some AWS and other Media settings based on what the AWS implementation needs to function. Also updated the image template tags and successfully able to pull the correct url from AWS to our pages now, but still having the security issue with AWS so we aren't able to see them render on the page yet.

--- a/templates/petrescue/homepage.html
+++ b/templates/petrescue/homepage.html
@@ -6,7 +6,7 @@
     {% for pet in pets %}
     <li class="list-inline-item">
       <a href="{% url 'get_pet' pk=pet.pk %}"><div class="card homepage_card">
-    <img src="media/{{ pet.pet_photo }}" class="card-img-top img-thumbnail homepage_img" alt="photo-of-{{pet.name}}">
+    <img src="{{ pet.pet_photo.url }}" class="card-img-top img-thumbnail homepage_img" alt="photo-of-{{pet.name}}">
     <div class="card-body">
       <h5 class="card-title">
         <a href="{% url 'get_pet' pk=pet.pk %}">{{ pet.name }}</a></h5>
